head,codes,formesAnd input tag in depath information

--- a/head.html
+++ b/head.html
@@ -15,6 +15,7 @@
     <meta name="description" content="this is web page">
     <!-- Realy use this http-equiv -->
     <meta http-equiv="referesh" content="30"> 
+    <meta name="viewport" content="width=device-width, initial-scale=0.9">
 
 </head>
 
@@ -38,3 +39,4 @@
 </body>
 
 </html>
+
